--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -164,9 +164,9 @@
     <div id="templates" class="input-section">
         <h2>Download Templates</h2>
         <p class="note">Download the templates below, edit them, and then upload them in the "File Upload" section.</p>
-        <a href="templates/nurses_file.csv" download="nurses_file.csv">Download Nurses Template (CSV)</a>
-        <a href="templates/preferences_file.csv" download="preferences_file.csv">Download Preferences Template (CSV)</a>
-        <a href="templates/requirements_file.csv" download="requirements_file.csv">Download Requirements Template (CSV)</a>
+        <a href="nurses_file.csv" download="nurses_file.csv">Download Nurses Template (CSV)</a>
+        <a href="preferences_file.csv" download="preferences_file.csv">Download Preferences Template (CSV)</a>
+        <a href="requirements_file.csv" download="requirements_file.csv">Download Requirements Template (CSV)</a>
     </div>
 
     <div class="input-section">
