--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -164,9 +164,9 @@
     <div id="templates" class="input-section">
         <h2>Download Templates</h2>
         <p class="note">Download the templates below, edit them, and then upload them in the "File Upload" section.</p>
-        <a href="nurses_file.csv" download="nurses_file.csv">Download Nurses Template (CSV)</a>
-        <a href="preferences_file.csv" download="preferences_file.csv">Download Preferences Template (CSV)</a>
-        <a href="requirements_file.csv" download="requirements_file.csv">Download Requirements Template (CSV)</a>
+        <a href="templates/nurses_file.csv" download="nurses_file.csv">Download Nurses Template (CSV)</a>
+        <a href="templates/preferences_file.csv" download="preferences_file.csv">Download Preferences Template (CSV)</a>
+        <a href="templates/requirements_file.csv" download="requirements_file.csv">Download Requirements Template (CSV)</a>
     </div>
 
     <div class="input-section">
@@ -232,9 +232,8 @@
 
     <div id="gantt-chart">
         <h2>Gantt Chart</h2>
-        <p class="note">The Gantt chart visualizing the nurse schedule will be displayed here after generation.</p>
-        <span id="gantt-caption" style="display:block; text-align:center; color:#777; font-size:0.9em; margin-top:5px;">The below Gantt chart is based on template inputs.</span>
-        <img id="gantt-placeholder" src="placeholder_gantt.png" alt="Gantt Chart Placeholder">
+        <span id="gantt-caption" style="display:block; text-align:center; color:#777; font-size:0.9em; margin-top:5px;">The below Gantt chart is based on template inputs. The Gantt chart visualizing the nurse schedule will be displayed here after generation.</span>
+        <img id="templates/gantt-placeholder" src="placeholder_gantt.png" alt="Gantt Chart Placeholder">
         <img id="gantt-image" style="max-width: 100%; display: none;" alt="Gantt Chart">
     </div>
 
