--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -232,8 +232,9 @@
 
     <div id="gantt-chart">
         <h2>Gantt Chart</h2>
-        <span id="gantt-caption" style="display:block; text-align:center; color:#777; font-size:0.9em; margin-top:5px;">The below Gantt chart is based on template inputs. The Gantt chart visualizing the nurse schedule will be displayed here after generation.</span>
-        <img id="templates/gantt-placeholder" src="placeholder_gantt.png" alt="Gantt Chart Placeholder">
+        <p class="note">The Gantt chart visualizing the nurse schedule will be displayed here after generation.</p>
+        <span id="gantt-caption" style="display:block; text-align:center; color:#777; font-size:0.9em; margin-top:5px;">The below Gantt chart is based on template inputs.</span>
+        <img id="gantt-placeholder" src="placeholder_gantt.png" alt="Gantt Chart Placeholder">
         <img id="gantt-image" style="max-width: 100%; display: none;" alt="Gantt Chart">
     </div>
 
