--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -232,9 +232,9 @@
 
     <div id="gantt-chart">
         <h2>Gantt Chart</h2>
-        <p class="note">The Gantt chart visualizing the nurse schedule will be displayed here after generation.</p>
-        <span id="gantt-caption" style="display:block; text-align:center; color:#777; font-size:0.9em; margin-top:5px;">The below Gantt chart is based on template inputs.</span>
-        <img id="gantt-placeholder" src="placeholder_gantt.png" alt="Gantt Chart Placeholder">
+        <p class="note"> </p>
+        <span id="gantt-caption" style="display:block; text-align:center; color:#777; font-size:0.9em; margin-top:5px;">The below Gantt chart visualizing the nurse schedule is based on template inputs. The optimal Gantt chart based on your inputs will be displayed here after generation.</span>
+        <img id="gantt-placeholder" src="templates/placeholder_gantt.png" alt="Gantt Chart Placeholder">
         <img id="gantt-image" style="max-width: 100%; display: none;" alt="Gantt Chart">
     </div>
 
@@ -581,7 +581,7 @@
                     document.getElementById('schedule-csv').style.display = 'block';
                     document.getElementById('stats-csv').style.display = 'block';
                     document.getElementById('coverage-csv').style.display = 'block';
-                    document.getElementById('gantt-caption').innerText = 'The Gantt chart for the optimal schedule.';
+                    document.getElementById('gantt-caption').innerText = 'The below Gantt chart visualizing the optimal nurse schedule is based on your inputs.';
                 }
             } catch (error) {
                 document.getElementById('status').innerText = 'Error: ' + error.message;
