--- a/research.html
+++ b/research.html
@@ -81,7 +81,7 @@
     <div class="project">
       <h2>Master of Science’s Thesis</h2>
       <p><strong>“A Markov Decision Processes Model For Supplier Selection in Supply-Chain Management Under Uncertainty”</strong><br>
-      Advisor: Prof. Alireza Haji</p>
+      Advisor: Professor Alireza Haji</p>
       <p>We study a two-echelon supply chain with a central distribution center and two suppliers with different levels of unreliability. The goal is to decide the optimal ordering proportions from each supplier under uncertainty. The problem is modeled as a discrete-time Markov Decision Process and solved exactly for a finite time horizon. Our contribution includes a new Markov Chain with three states to better capture the unreliable supplier’s behavior.</p>
       <div class="links">
         <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4833769" target="_blank">View on SSRN</a> |
@@ -92,7 +92,7 @@
     <div class="project">
       <h2>Summer Paper</h2>
       <p><strong>“Energy-Efficient Resource Scheduling for a Single Machine with Production Constraints: A Mathematical Model”</strong><br>
-      Advisor: Prof. Barış Tan</p>
+      Advisor: Professor Barış Tan</p>
       <p>This study models a single-machine production system with input buffer and throughput constraints. We formulate an energy-efficient scheduling model using robust optimization under uncertainty, balancing operational costs with desired throughput. The server can switch between on, off, and warm-up states, and our model ensures feasibility across scenarios while minimizing average costs.</p>
       <div class="links">
         <a href="mailto:hamed.milani@ucalgary.ca" target="_blank">Available upon request</a>
