--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -160,9 +160,12 @@
 <body>
     <h1>Helsa Nurse Scheduling Application</h1>
     <p>Nurse scheduling (or shift management) is a long-standing challenge in many hospitals and healthcare systems. While the problem has been widely studied in academia, especially in operations research, there are still very few software tools that are actually used by hospital staff.
-Based on our interviews with nurses from three different cities in Iran, we found that nurse scheduling is still often done manually by one of the volunteer nurses. This process can be time-consuming and inefficient, especially when considering multiple constraints such as department-specific shift requirements, and fairness (based on seniority, weekend and night shifts, and individual preferences).
+
+        </p>
+    <p>Based on our interviews with nurses from three different cities in Iran, we found that nurse scheduling is still often done manually by one of the volunteer nurses. This process can be time-consuming and inefficient, especially when considering multiple constraints such as department-specific shift requirements, and fairness (based on seniority, weekend and night shifts, and individual preferences).
 This problem is a variation of the classic "assignment problem" in operations research. To address it, we develop an integer programming model in Python using the Gurobi optimization library. More technical details are available in the application catalog. 
-        To generate the optimal nurse schedule, you need to define the following inputs: a) Nurse ID/Name/Seniority. b) Preferences for each shift (if available). c) Shift requirements (number of nurses needed per shift across the planning horizon).
+        </p>
+       <p> To generate the optimal nurse schedule, you need to define the following inputs: a) Nurse ID/Name/Seniority. b) Preferences for each shift (if available). c) Shift requirements (number of nurses needed per shift across the planning horizon).
 You can enter the inputs in one of two ways: 1) Manual entry: Add each input one by one inside the app. 2) File upload: Upload all inputs using three CSV files. You can also combine both methods, manual entries will override any matching entries from the uploaded files.
 
 </p>
