--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -172,7 +172,10 @@ You can enter the inputs in one of two ways: 1) Manual entry: Add each input one
 
     <div id="templates" class="input-section">
         <h2>Download Templates</h2>
-        <p class="note">Download the templates below, edit them, and then upload them in the "File Upload" section.</p>
+        <p class="note">Download the following three input templates. Fill them in based on your own nurse list and needs, keep the header rows and the file names unchanged, and upload them before clicking Generate Optimal Schedule.</p>
+        <p class="note">Currently, the app supports scheduling for up to 20 nurses.</p>
+        <p class="note">Shift IDs: Morning: 1, Evening: 2, Night: 3.</p>
+        <p class="note">Preference Levels: 0 means not available. 1 to 10 means level of preference (1 = least preferred, 10 = most preferred). No entry is treated as neutral (no preference).</p>
         <a href="templates/nurses_file.csv" download="nurses_file.csv">Download Nurses Template (CSV)</a>
         <a href="templates/preferences_file.csv" download="preferences_file.csv">Download Preferences Template (CSV)</a>
         <a href="templates/requirements_file.csv" download="requirements_file.csv">Download Requirements Template (CSV)</a>
