--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -194,7 +194,7 @@ You can enter the inputs in one of two ways: 1) Manual entry: Add each input one
 
     <div class="input-section">
         <h2>Manual Input</h2>
-        <p class="note">Enter data for nurses, shift requirements, and preferences. Add multiple entries by clicking the "Add" buttons. Preference level of 0 means unavailable; 1–10 indicates preference (10 is most preferred).</p>
+        <p class="note">Enter data for nurses, shift requirements, and preferences. Add multiple entries by clicking the "Add" buttons. </p>
 
         <div id="manual-inputs">
             <div id="nurses-input">
@@ -226,7 +226,7 @@ You can enter the inputs in one of two ways: 1) Manual entry: Add each input one
 
             <div id="preferences-input">
                 <h3>Preferences</h3>
-                <p class="note">Enter nurse ID, shift (1/2/3), date, and preference level (0–10).</p>
+                <p class="note">Enter nurse ID, shift (1/2/3), date, and preference level (0–10). A preference level of 0 means unavailable; 1–10 indicates preference (10 is most preferred).</p>
                 <div class="input-line">
                     <label>Preference:</label>
                     <input type="text" placeholder="Nurse ID" data-input-type="pref_nurse_id">
