--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -250,6 +250,20 @@ You can enter the inputs in one of two ways: 1) Manual entry: Add each input one
                 <a id="coverage-csv" href="#" style="display: none;">Download Shift Coverage (CSV)</a>
             </div>
 
+<div id="sample-outputs" class="input-section">
+    <h2>Sample Output Files</h2>
+    <p>You can also download sample output files (based on the template inputs) to understand the format and compare them with your own results. The outputs include:</p>
+    <ul>
+        <li><strong>A Gantt chart:</strong> showing each nurse’s schedule across the planning horizon.</li>
+        <li><strong>Fairness metrics:</strong> shown on the Gantt chart, including variance in total shifts and variance in weekend shifts per nurse.</li>
+        <li><strong>Nurse-based reports:</strong> total number of each type of shift, full shift calendar, list of colleagues per shift.</li>
+        <li><strong>Shift coverage:</strong> number of nurses assigned to each shift.</li>
+    </ul>
+    <a href="samples/sample_gantt_chart.png" download>Download Sample Gantt Chart (PNG)</a>
+    <a href="samples/sample_fairness_metrics.csv" download>Download Sample Fairness Metrics (CSV)</a>
+    <a href="samples/sample_nurse_reports.csv" download>Download Sample Nurse-Based Reports (CSV)</a>
+    <a href="samples/sample_shift_coverage.csv" download>Download Sample Shift Coverage (CSV)</a>
+</div>
 
 
     <div id="gantt-chart">
