--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -163,10 +163,10 @@
 
         </p>
     <p>Based on our interviews with nurses from three different cities in Iran, we found that nurse scheduling is still often done manually by one of the volunteer nurses. This process can be time-consuming and inefficient, especially when considering multiple constraints such as department-specific shift requirements, and fairness (based on seniority, weekend and night shifts, and individual preferences).
-This problem is a variation of the classic "assignment problem" in operations research. To address it, we develop an integer programming model in Python using the Gurobi optimization library. More technical details are available in the application catalog. 
+This problem is a variation of the classic "assignment problem" in operations research. To address this problem, we develop an integer programming model in Python using the Gurobi optimization library. More technical details are available in the application catalog. 
         </p>
-       <p> To generate the optimal nurse schedule, you need to define the following inputs: a) Nurse ID/Name/Seniority. b) Preferences for each shift (if available). c) Shift requirements (number of nurses needed per shift across the planning horizon).
-You can enter the inputs in one of two ways: 1) Manual entry: Add each input one by one inside the app. 2) File upload: Upload all inputs using three CSV files. You can also combine both methods, manual entries will override any matching entries from the uploaded files.
+       <p> To generate the optimal nurse schedule, the following three sets of inputs are defined: a) Nurse ID/Name/Seniority. b) Preferences for each shift (if available). c) Shift requirements (number of nurses needed per shift across the planning horizon).
+You can enter the inputs in one of two ways of file upload and manual entry. You can also combine both methods, manual entries will override any matching entries from the uploaded files.
 
 </p>
 
@@ -186,25 +186,15 @@ You can enter the inputs in one of two ways: 1) Manual entry: Add each input one
         <a href="templates/requirements_file.csv" download="requirements_file.csv">Download Requirements Template (CSV)</a>
     </div>
 
-    <div class="input-section">
-        <h2>File Upload</h2>
-        <p class="note"> Leave blank if using manual input.</p>
-        <label for="nursesFile" class="upload-label">Upload Nurses Data (CSV):</label>
-        <input type="file" id="nursesFile" accept=".csv">
-        <label for="preferencesFile" class="upload-label">Upload Preferences Data (CSV):</label>
-        <input type="file" id="preferencesFile" accept=".csv">
-        <label for="requirementsFile" class="upload-label">Upload Requirements Data (CSV):</label>
-        <input type="file" id="requirementsFile" accept=".csv">
-    </div>
+
 
     <div class="input-section">
         <h2>Manual Input</h2>
-        <p class="note">Add multiple entries by clicking the "Add" buttons. </p>
 
         <div id="manual-inputs">
             <div id="nurses-input">
                 <h3>Nurses Information</h3>
-                <p class="note">Enter nurse details (ID, Name, Type - 0 for normal, 1 for senior).</p>
+                <p class="note">Enter nurse ID, Name, and Type (0 for normal, 1 for senior).</p>
                 <div class="input-line">
                     <label>Nurse Info:</label>
                     <input type="text" placeholder="ID" data-input-type="nurse_id">
@@ -244,6 +234,17 @@ You can enter the inputs in one of two ways: 1) Manual entry: Add each input one
         </div>
     </div>
 
+        <div class="input-section">
+        <h2>File Upload</h2>
+        <p class="note"> Leave blank if using manual input.</p>
+        <label for="nursesFile" class="upload-label">Upload Nurses Data (CSV):</label>
+        <input type="file" id="nursesFile" accept=".csv">
+        <label for="preferencesFile" class="upload-label">Upload Preferences Data (CSV):</label>
+        <input type="file" id="preferencesFile" accept=".csv">
+        <label for="requirementsFile" class="upload-label">Upload Requirements Data (CSV):</label>
+        <input type="file" id="requirementsFile" accept=".csv">
+    </div>
+
     <button type="button" onclick="generateSchedule()">Generate Schedule and Reports</button>
     <div id="status"></div>
 
@@ -260,7 +261,7 @@ You can enter the inputs in one of two ways: 1) Manual entry: Add each input one
     <div id="gantt-chart">
         <h2>Gantt Chart</h2>
         <p class="note"> </p>
-        <span id="gantt-caption" style="display:block; text-align:center; color:#777; font-size:0.9em; margin-top:5px;">The below Gantt chart is based on template inputs. The optimal Gantt chart based on your inputs will be displayed here after generation.</span>
+        <span id="gantt-caption" style="display:block; text-align:center; color:#777; font-size:0.9em; margin-top:5px;">The below Gantt chart is based on template inputs. The optimal Gantt chart based on your inputs will be displayed here after new schedule generation.</span>
         <img id="gantt-placeholder" src="templates/placeholder_gantt.png" alt="Gantt Chart Placeholder">
         <img id="gantt-image" style="max-width: 100%; display: none;" alt="Gantt Chart">
     </div>
