--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -261,7 +261,7 @@ You can enter the inputs in one of two ways of file upload and manual entry. You
     <div id="gantt-chart">
         <h2>Gantt Chart</h2>
         <p class="note"> </p>
-        <span id="gantt-caption" style="display:block; text-align:center; color:#777; font-size:0.9em; margin-top:5px;">The below Gantt chart is based on template inputs. The optimal Gantt chart based on your inputs will be displayed here after new schedule generation.</span>
+        <span id="gantt-caption" style="display:block; text-align:center; color:#777; font-size:0.9em; margin-top:5px;">The below Gantt chart is based on template inputs. The optimal Gantt chart based on your inputs will be displayed here after generating the new schedule.</span>
         <img id="gantt-placeholder" src="templates/placeholder_gantt.png" alt="Gantt Chart Placeholder">
         <img id="gantt-image" style="max-width: 100%; display: none;" alt="Gantt Chart">
     </div>
